--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 		<script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
 		<script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
 		<script src="https://rawgit.com/caseyyee/aframe-ui-widgets/master/dist/ui-widgets.min.js"></script>
-		<!-- https://github.com/oscarmarinmiro/aframe-video-controls -->
+		<script src="https://rawgit.com/oscarmarinmiro/aframe-video-controls/master/dist/aframe-video-controls.min.js"></script>
+		<script src="aframe-video-controls.js"></script>
 	</head>
 	<body>
 		<a-scene>
