--- a/index.html
+++ b/index.html
@@ -5,15 +5,9 @@
 	<body>
 		<a-scene>
 			<a-assets>
-				<video id="test" src="test.mp4"></video>
-				<!-- <video id="video_1" src="https://ucarecdn.com/bcece0a8-86ce-460e-856b-40dac4875f15/"></video> -->
+				<!-- <video id="video-default" src="video_default.mp4"></video> -->
+				<video id="video-default" src="https://ucarecdn.com/51ac24de-3ffd-4ce3-bef3-a8e9ddf68313/truckeeshort1080.mkv"></video>
 			</a-assets>
-			<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-			<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-			<a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-			<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-			<a-sky color="#ECECEC"></a-sky>
-			<!-- <a-videosphere id="videosphere" src="test.mp4"></a-videosphere> -->
 			<a-videosphere id="videosphere" src="#test" rotation="0 0 0"></a-videosphere>
 		</a-scene>
 		<script src="index.js"></script>
