autoplay and loop vid

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<a-scene>
 			<a-assets>
-				<video id="video-default" src="https://ucarecdn.com/51ac24de-3ffd-4ce3-bef3-a8e9ddf68313/truckeeshort1080.mkv"></video>
+				<video autoplay loop id="video-default" src="https://ucarecdn.com/51ac24de-3ffd-4ce3-bef3-a8e9ddf68313/truckeeshort1080.mkv"></video>
 			</a-assets>
 			<a-videosphere id="videosphere" src="#video-default" rotation="0 0 0"></a-videosphere>
 		</a-scene>
