--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 		<script src="https://rawgit.com/feiss/aframe-environment-component/master/dist/aframe-environment-component.min.js"></script>
 		<script src="https://rawgit.com/caseyyee/aframe-ui-widgets/master/dist/ui-widgets.min.js"></script>
 		<script src="https://rawgit.com/oscarmarinmiro/aframe-video-controls/master/dist/aframe-video-controls.min.js"></script>
-		<script src="aframe-video-controls.js"></script>
+		<!-- <script src="aframe-video-controls.js"></script> -->
+		<script src="https://rawgit.com/etiennepinchon/aframe-material/master/dist/aframe-material.js"></script>
+		<script type="text/javascript">
+			AFRAME.ASSETS_PATH = "./assets"
+		</script>
+		<script src="index-pre.js"></script>
 	</head>
 	<body>
 		<a-scene>
@@ -15,18 +20,61 @@
 				<a-asset-item id="goggles-mtl" src="models/stereoscope/obj-triangulated/materials.mtl"></a-asset-item>
 			</a-assets>
 
+			<a-sphere play-pause-button position="-1 0 0" scale="0.2 0.2 0.2"></a-sphere>
+			<a-sphere mute-button position="1 0 0" scale="0.2 0.2 0.2"></a-sphere>
+
+			<!-- <a-switch position="0 0.8 2" enabled="true"></a-switch> -->
+
+			<!-- <a-entity laser-controls="hand: right"></a-entity> -->
+
+			<!-- BEGIN INPUTS/KEYBOARD -->
+			<!-- <a-keyboard></a-keyboard>
+			<a-input position="-0.7 1 -2.5" placeholder="Username" color="black" width="1"></a-input>
+			<a-input position="-0.7 0.8 -2.5" type="password" placeholder="Password" color="black" width="1"></a-input> -->
+			<!-- END INPUTS/KEYBOARD -->
+
+
+			<!-- BEGIN FORM -->
+			<!-- <a-rounded position="0.5 0.5 -2.5" width="4" height="3.1" radius="0.05" rotation="0 -20 0" scale="0.3 0.3 0.3">
+			  <a-form>
+			    <a-switch position="0.2 2.7 0" enabled="true"></a-switch>
+			    <a-radio position="0.2 2.4 0" width="3" name="food" label="Burger with fries and pizza" value="pizza"></a-radio>
+			    <a-radio position="0.2 2.1 0" width="3" name="food" label="Veggies" checked="true" disabled="true"></a-radio>
+			    <a-radio position="0.2 1.8 0" width="3" name="food" label="Ice cream"></a-radio>
+			    <a-checkbox position="0.2 1.5 0" width="3" name="stuff" label="I am a checkbox" checked="true"></a-checkbox>
+			    <a-checkbox position="0.2 1.2 0" width="3" name="stuff" label="And I am another one" checked="true" disabled="true"></a-checkbox>
+			    <a-button position="0.2 0.8 0" name="stuff" value="Click me" type="raised"></a-button>
+			    <a-button position="0.2 0.35 0" width="3" name="stuff" value="You cannot click me" disabled="true"></a-button>
+			  </a-form>
+			</a-rounded> -->
+			<!-- END FORM -->
+
+			<!-- BEGIN TOAST -->
+			<!-- <a-toast message="This is a toast" action="Got it"></a-toast> -->
+			<!-- END TOAST -->
+
+			<a-entity camera="userHeight: 1.6" look-controls wasd-controls>
+				<!-- <a-entity cursor="fuse: true; fuseTimeout: 500" -->
+				<a-entity cursor
+					position="0 0 -1"
+					geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03"
+					material="color: black; shader: flat">
+				</a-entity>
+			</a-entity>
+
 			<!-- <a-entity environment></a-entity> -->
 			<!-- https://www.npmjs.com/package/aframe-environment-component -->
 
-			<a-entity obj-model="obj: #goggles-obj; mtl: #goggles-mtl"></a-entity>
+			<a-entity position="0 10 0" obj-model="obj: #goggles-obj; mtl: #goggles-mtl"></a-entity>
 
 			<a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
 			<a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
 			<a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
 			<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-			<a-sky color="#ECECEC"></a-sky>
+			<!-- <a-sky color="#ECECEC"></a-sky> -->
 			<!-- <a-videosphere id="videosphere" src="test.mp4"></a-videosphere> -->
 			<a-videosphere id="videosphere" src="#test" rotation="0 0 0"></a-videosphere>
+			<!-- <a-entity video-controls="src:#test"></a-entity> -->
 		</a-scene>
 		<script src="index.js"></script>
 	</body>
